Create new file named Tiramisu.html Linked it from index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     </head>
     <body>
         <h1>My Recipes</h1>
+        <a href="recipes/tiramisu.html"><h5>Tiramisu</h5></a>
     </body>
 </html>
